2004-04-21  Tomasz Kłoczko <kloczek@pld.org.pl>

	* acinclude.m4: minor fixes (added missing [] quotation).

2004-04-13  Lars Clausen  <larsØraeder.dk>

	* app/interface.c (toolbox_delete): 
	* app/app_procs.[ch] (app_exit): Stop the delete event if the user
	cancels quit due to modified diagrams.

2004-04-07  Samúel Jón Gunnarsson  <sammi@techattack.nu>

	* is.po: Added "is" to ALL_LINGUAS.

2004-04-04  Lars Clausen  <lars@raeder.dk>

	* configure.in: 
	* dia.spec (Release): 
	* NEWS: 
	* config.h.win32: 
	* doc/{en,pl}/dia.xml: 
	Update to pre2.

	* dia.spec: Updated as per mail from Zhang Lin-bo <zlb@lsec.cc.ac.cn>

2004-04-03  Lars Clausen  <lars@raeder.dk>

	* objects/standard/ellipse.c (ellipse_copy): Properly copy the
	handle in the middle of the ellipse.

2004-03-21  Hans Breuer  <hans@breuer.org>

	* lib/makefile.msc : removed -DGTK_DISABLE_DEPRECATED; the 
	burden should be shared and not be win32 only ;) [this time 
	build was broken by adding GtkType to widget.h]

	* objects/standard/box.c objects/standard/ellipse.c :
	for code clarification compare (obj->aspect != FREE_ASPECT)
	and not (obj->aspect); no binary effect.

	* app/paginate_psprint.c : don't leak printcmd

	* objects/standard/box.c objects/standard/ellipse.c : fix gccisms :
	standard C requires variables to be declared at the beginning of 
	a block, also there is no fabsf() with msvc
	
	* app/win32print.[ch] : make win32_printer_close() return an
	error code, it's used as pclose replacement

2004-03-20  Lars Clausen  <lars@raeder.dk>

	* RELEASE-PROCESS: Mention PATCH keyword in release process.

2004-03-19  Lars Clausen  <lars@raeder.dk>

	* xmldocs.make: Fixed apparent uninstall error.

	* config.h.win32: 
	* doc/en/dia-manual.xml: 
	* doc/pl/dia-manual.xml: 
	* dia.spec: 
	* configure.in: 
	* NEWS: Version 0.93-pre1.

	* lib/dialinechooser.[ch]: Patch from pborelli@katamail.com (paolo
	borelli):  Remove some deprecated stuff.

2004-03-18  Lars Clausen  <lars@raeder.dk>
